@@ -21,8 +21,10 @@ apport (0.62) UNRELEASED; urgency=low
   * test-hooks: Run tests on installed hooks in /usr/share/apport by default
     and add a '--local' switch to test the hooks in the source tree instead.
     Use this option in run-tests.
+  * apport/report.py, test_add_proc_info(): Change the python script test 
+    so that it does not depend on being run in the source tree.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 13:16:20 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 13:50:07 +0100
 
 apport (0.61) feisty; urgency=low
 
